# multiscale-signal-analysis

./: CONTRIBUTING.md  LICENSE.txt  README.md  yolov5.7z
EmbedCompute/: CMakeLists.txt  build.sh  embedded_nr.cpp  embedded_nr.h  ffmpeg_stream.cpp  ffmpeg_stream.h  main.cpp  requirements.txt  yolo_inference.cpp  yolo_inference.h
EmbedCompute/YOLO_script/: Wild_animals_detection_Darknet.py  YOLO_parser_integrated.py  video_detect.py  yolo_keypoints.py
Utilities/: Annotations.7z
